
ChangeLog
 [ + added, - removed, * changed ]
 + 02Mar2016 Add code reference to memory allocated object
 + 29Feb2016 Included the size of MPI-IO operations in the trace 
 * 26Feb2016 States per thread are no longer allocated statically but
              reallocated on demand.
             Remove SVN keywords for most of the files.
 * 19Feb2016 Fixed bug preparing the output trace name
 * 10Feb2016 OpenCL fixes: ClFinish communication to reach end,
              emit OpenCL synchro at the ClFinish begin,
              communication of executing kernel goes to beginning
 * 04Feb2016 Fix MPI/F77 examples. Neither IBM/Intel compilers liked the
               extra space.
 * 03Feb2015 Sanitized memory reference samples point to the variable
             Fix compilation with -lpthread/-pthread when building
               pthread instrumentation libraries
 * 01Feb2016 Improve memory reference samples point to the variable
 + 01Feb2016 Emit event OpenCL thread id for command queue in clFinish
 + 22Jan2016 Add instrumentation for cudaDeviceSynchronize
 - 18Jan2016 Remove extrae-post-installation.sh. It was broken.
 * 13Jan2016 Memory reference samples point to the variable (either static or
               dynamically allocated)
 * 08Jan2016 Improved boost search in configure
 * 07Jan2016 Emit raw system time at APPL_EV events for synchronization purposes
               with other tools
 * 05Jan2016 Fixed bug when generating communications between Memcpy commands
               in CUDA applications
 * 18Dec2015 Fixed bug in Time Synchronization due to uninit Spawn time if MPI_Comm_spawn was not used
             Emit Java thread name in Java thread start
 * 15Dec2015 Fixed bug in Map_Paraver_Files at file_set.c. Field SkipAsMasterOfSubtree of PRVFileSet_t was not initialized, leading to undeterministic problems where this would randomly take garbage values ending in a later race condition in the parallel merge. 
 + 11Dec2015 Added documentation for use on top of PnMPI